@@ -1,3 +1,4 @@
 April 2012
+	- Added option to switch off notification
 	- Initial Release
 
